--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src = "portfilio1.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" type="text/css">
-    <link rel="stylesheet" href="portfolio1.css" type="text/css">
+    <link rel="stylesheet" href="index.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
